# proyecto_poo

./: CMakeLists.txt  bucket.json  main.cpp
clases/Episodio/: Episodio.cpp  Episodio.hpp
clases/Pelicula/: Pelicula.cpp  Pelicula.hpp
clases/Serie/: Serie.cpp  Serie.hpp
clases/StreamingServ/: StreamimgServ.cpp  StreamimgServ.hpp
clases/Video/: Video.cpp  Video.hpp
